[package]
name = "conch"
version = "0.1.0"
authors = ["Dermot Haughey <hderms@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "conch"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2018"       # The edition of the target.
crate-type = ["lib"]
required-features = []